--- a/T23-G1/docker-compose.yml
+++ b/T23-G1/docker-compose.yml
@@ -30,4 +30,4 @@ services:
   
 # networks:
 #   global-network:
-#     external: true # Decommentare per utilizzare il progetto generale
+#     external: true # Decommentare per utilizzare il progetto totale
